--- a/style/style.css
+++ b/style/style.css
@@ -24,6 +24,7 @@
 }
 /* Custom Dark 3 */
 .text-dark3{
+    line-height: 1.6rem;
     color: #727272;
 }
 /* Color Primary */
@@ -34,10 +35,16 @@
 .bg-light{
     background-color: rgba(255, 144, 14, 0.1);
 }
+/* Every Section Title */
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
 /* Display Flex */
 .display-flex{
     display: flex;
 }
+/* Primary Button */
 .btn-primary{
     background-color: rgba(255, 144, 14, 1);
     color: #FFFFFF;
@@ -46,6 +53,11 @@
     font-weight: 600;
     font-size: 1.25rem;
     border: none;
+    cursor: pointer;
+    transition: opacity 0.15s;
+}
+.btn-primary:hover{
+    opacity: 0.80;
 }
 .main{
     max-width: 1440px;
@@ -65,6 +77,9 @@
 .nav-link{
     text-decoration: none;
     font-weight: 500;
+}
+.nav-link:hover{
+    text-decoration: underline;
 }
 .navbar{
     justify-content: space-between;
@@ -110,9 +125,6 @@
     margin-left: 73px;
     max-width: 573px;
 }
-.feature-title{
-    font-size: 2.8rem;
-}
 .feature-title>span:nth-child(1){
     font-weight: 500;
 }
@@ -126,9 +138,6 @@
 @media screen and (max-width: 576px){
     .nav-link{
         font-size: 25px;
-    }
-    .nav-link:hover{
-        text-decoration: underline;
     }
     .nav-item{
         /* margin: 0 auto; */
