--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,7 @@
 }
 /* Light Background Color */
 .bg-light{
+    width: 100%;
     background-color: rgba(255, 144, 14, 0.1);
 }
 /* Every Section Title */
@@ -133,6 +134,54 @@
 }
 
 
+/* *********************Some Facts Section********************* */
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+.fact-card{
+    border: 1px solid rgba(255, 144, 14, 1);
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin: 10px 0 5px 0;
+}
+.fact-name{
+    font-weight: 600;
+    font-size: 1.2rem;
+    margin: 10px 0 5px 0;
+}
+.fact-description{
+    width: 542px;
+}
+
+
+/* *********************Sponser Style********************* */
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-info>h3{
+    margin-bottom: 24px;
+}
+.sponser-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+}
+.sponser-companies>img{
+    filter: grayscale(100%);
+}
+
+
 /* ---------------------------------------Media Query--------------------------------------- */
 /* small device */
 @media screen and (max-width: 576px){
@@ -148,11 +197,21 @@
     .nav-links{
         flex-direction: column;
     }
+    .sponser-companies,
+    .facts-container,
     .team-img-container{
         grid-template-columns: repeat(1, 1fr);
     }
+    .facts-container{
+        justify-items: center;
+        gap: 24px;
+    }
     .our-features{
         margin-left: 20px;
+    }
+    .sponser-companies{
+        gap: 50px;
+        justify-items: center;
     }
 }
 /* medium device */
@@ -162,5 +221,22 @@
     }
     .our-features{
         margin: 0 auto;
+    }
+    #e1,
+    .section-title{
+        text-align: center;
+        margin: 0 auto;
+    }
+    .facts-container{
+        display: grid;
+        grid-template-columns: repeat(2, 240px);
+        justify-content: center;
+        align-items: center;
+        gap: 24px;
+        margin: 0 auto;
+    }
+    .sponser-companies{
+        grid-template-columns: repeat(3, 1fr);
+        gap: 50px;
     }
 }
